Fix [General] Chips have redundant scrollbars (#196)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -184,7 +184,7 @@ input {
 }
 
 .data-ellipsis {
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
